[gameOfLife] Fix board/header overflow bug on small screens

--- a/game-of-life/source/sass/style.scss
+++ b/game-of-life/source/sass/style.scss
@@ -31,5 +31,6 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
